--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "iobroker.template_react",
+  "name": "iobroker.hue-sync-box",
   "version": "0.0.1",
-  "description": "Template React with AlCalzone Hooks",
+  "description": "",
   "contributors": [
     {
       "name": "Issi",
       "email": "issi.dev.iobroker@gmail.com"
     }
   ],
-  "homepage": "https://github.com/xXBJXx/ioBroker.template_react",
+  "homepage": "https://github.com/xXBJXx/ioBroker.hue-sync-box",
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "template",
     "Smart Home",
     "home automation"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/xXBJXx/ioBroker.template_react"
+    "url": "https://github.com/xXBJXx/ioBroker.hue-sync-box"
   },
   "engines": {
     "node": ">= 16"
@@ -101,7 +100,7 @@
     "release": "release-script"
   },
   "bugs": {
-    "url": "https://github.com/xXBJXx/ioBroker.template_react/issues"
+    "url": "https://github.com/xXBJXx/ioBroker.hue-sync-box/issues"
   },
   "readmeFilename": "README.md"
 }
