--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/xXBJXx/ioBroker.hue-sync-box"
   },
   "engines": {
-    "node": ">= 14"
+    "node": ">= 16"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7"
@@ -60,6 +60,7 @@
     "proxyquire": "^2.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.2",
     "sinon-chai": "^3.7.0",
