--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.6.7"
+    "@iobroker/adapter-core": "^2.6.7",
+    "axios": "^1.2.2",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
@@ -35,42 +37,40 @@
     "@emotion/styled": "^11.10.5",
     "@iobroker/adapter-dev": "^1.2.0",
     "@iobroker/testing": "^4.1.0",
-    "@mui/icons-material": "^5.10.14",
-    "@mui/material": "^5.10.14",
-    "@mui/styles": "^5.10.14",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "@mui/styles": "^5.11.2",
     "@tsconfig/node16": "^1.0.3",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^18.11.9",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.18",
     "@types/proxyquire": "^1.3.28",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "axios": "1.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.0",
     "iobroker-react": "git+https://git@github.com/xXBJXx/iobroker-react.git",
-    "mocha": "^10.1.0",
-    "prettier": "^2.7.1",
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.2",
     "proxyquire": "^2.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
-    "rimraf": "^3.0.2",
-    "sinon": "^14.0.2",
+    "rimraf": "^4.0.4",
+    "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
-    "source-map-support": "^0.5.21",
     "tiny-glob": "^0.2.9",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.3"
+    "typescript": "^4.9.4"
   },
   "main": "build/main.js",
   "files": [
